--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
     "@vue/cli-service": "^3.0.0-beta.15",
+    "font-awesome": "^4.7.0",
     "mockjs": "^1.0.1-beta3",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.16"
   },
