--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "^0.18.0",
     "element-ui": "^2.4.1",
     "express": "^4.16.3",
-    "vue": "^2.5.16"
+    "vue": "^2.5.16",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
